@@ -1,0 +1,7 @@
+scriptsdir = $(prefix)/bin
+
+scripts_DATA = \
+	gnotime-remote
+
+EXTRA_DIST = \
+	$(scripts_DATA)
