@@ -1,0 +1,44 @@
+#!/bin/sh
+######################################################################
+##                
+## Copyright (C) 2007,  Goedson Teixeira Paixao
+##                
+## This program is free software; you can redistribute it and/or
+## modify it under the terms of the GNU General Public License
+## as published by the Free Software Foundation; either version 2
+## of the License, or (at your option) any later version.
+## 
+## This program is distributed in the hope that it will be useful,
+## but WITHOUT ANY WARRANTY; without even the implied warranty of
+## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+## GNU General Public License for more details.
+## 
+## You should have received a copy of the GNU General Public License
+## along with this program; if not, write to the Free Software
+## Foundation, Inc., 51 Franklin Street, Fifth Floor Boston, 
+## MA 02110-1301, USA
+##                
+## Filename:      gnotime-remote
+## Author:        Goedson Teixeira Paixao <goedson@debian.org>
+## Description:   Remote control for gnotime
+##                
+## Created at:    Sat Aug 25 20:11:47 2007
+## Modified at:   Sat Aug 25 20:17:12 2007
+## Modified by:   Goedson Teixeira Paixao <goedson@debian.org>
+######################################################################
+
+
+case "$1" in
+     start-timer)
+        dbus-send --print-reply --dest=net.sourceforge.gttr.gnotime.timer /net/sourceforge/gttr/gnotime net.sourceforge.gttr.gnotime.timer string:start
+        ;;
+     stop-timer)
+        dbus-send --print-reply --dest=net.sourceforge.gttr.gnotime.timer /net/sourceforge/gttr/gnotime net.sourceforge.gttr.gnotime.timer string:stop
+        ;;
+     *)
+        echo "usage: $0 <command>"
+        echo "Available commands are:"
+        echo "  start-timer - starts the timer"
+        echo "  stop-timer  - stops the timer"
+        ;;
+esac
