@@ -1,0 +1,12 @@
+<?xml version="1.0" encoding="UTF-8" ?>
+
+<node name="/">
+  <interface name="net.sourceforge.gttr.gnotime">
+    <method name="timer">
+      <arg direction="in" type="s" name="action"/>
+    </method>
+  </interface>
+</node>
+
+
+
